--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/material": "^7.3.6",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "~7.2.0",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@ng-bootstrap/ng-bootstrap": "^4.1.1",
     "@types/chart.js": "^2.7.51",
